1. Storage interface implementation (Not finished)